--- a/inetpub/wwwroot/ServicesMvc/Views/Wfm/Abmeldevorgaenge/Partial/Rechercheprotokoll.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Wfm/Abmeldevorgaenge/Partial/Rechercheprotokoll.cshtml
@@ -42,16 +42,16 @@
         </li>
     </ul>
     <div class="tab-content">
-        <div class="tab-pane" id="subtab_1_1">
+        <div class="tab-pane @(!Model.RechercheprotokollKundeVorhanden && !Model.RechercheprotokollHaendlerVorhanden && !Model.RechercheprotokollSachverstaendigerVorhanden && Model.RechercheprotokollSonstigeVorhanden ? "active" : "")" id="subtab_1_1">
             @Html.Partial("Abmeldevorgaenge/Partial/RechercheprotokollPartial", @Model.RechercheprotokollSonstige)
         </div> 
-        <div class="tab-pane" id="subtab_1_2">
+        <div class="tab-pane @(!Model.RechercheprotokollKundeVorhanden && !Model.RechercheprotokollHaendlerVorhanden && Model.RechercheprotokollSachverstaendigerVorhanden ? "active" : "")" id="subtab_1_2">
             @Html.Partial("Abmeldevorgaenge/Partial/RechercheprotokollPartial", @Model.RechercheprotokollSachverstaendiger)
         </div>               
-        <div class="tab-pane" id="subtab_1_3">
+        <div class="tab-pane @(!Model.RechercheprotokollKundeVorhanden && Model.RechercheprotokollHaendlerVorhanden ? "active" : "")" id="subtab_1_3">
             @Html.Partial("Abmeldevorgaenge/Partial/RechercheprotokollPartial", @Model.RechercheprotokollHaendler)
         </div>               
-        <div class="tab-pane active" id="subtab_1_4">
+        <div class="tab-pane @(Model.RechercheprotokollKundeVorhanden ? "active" : "")" id="subtab_1_4">
             @Html.Partial("Abmeldevorgaenge/Partial/RechercheprotokollPartial", @Model.RechercheprotokollKunde)  
         </div>
     </div>
