UI-Optimierung Rechercheprotokoll

--- a/inetpub/wwwroot/ServicesMvc/Views/Wfm/Abmeldevorgaenge/AuftragsDetail.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Wfm/Abmeldevorgaenge/AuftragsDetail.cshtml
@@ -6,6 +6,7 @@
     <span class="margin-left-10 margin-right-5 bold"> @Model.Selektor.Referenz1Name</span> @Model.AktuellerAuftrag.KundenAuftragsNr
     <span class="margin-left-10 margin-right-5 bold">@Localize.ChassisNo</span>@Model.AktuellerAuftrag.FahrgestellNr
     <span class="margin-left-10 margin-right-5 bold">@Localize.LicenseNo</span>@Model.AktuellerAuftrag.Kennzeichen
+    <span class="margin-left-10 margin-right-5 bold">@Localize.ReferenceNo</span>@Model.AktuellerAuftrag.Referenz1
 </h5>
 
 <div class="tabbable tabbable-custom margin-top-15">
