--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
@@ -201,7 +201,15 @@
         }
     }   
 
-    $(function () {
+    function EvbTest() {
+        var group = $("#EvbNr").closest(".control-group");
+        var label = group.find(".control-label");
+
+        group.addClass("kroschke-evb-control-group");
+        label.addClass("kroschke-evb");
+    }
+
+    function InitZulassungsdatenFormUI() {
         $('#Zulassungskreis').off('change').on('change').change(function() {
             var zulassungskreis = $(this).val();
             SetZulassungskreis(zulassungskreis);
@@ -210,15 +218,11 @@
         InitEvbVersInfo("EvbNr", "evb-info"); // Anzeige der Versichererdaten gem. EVB
 
         EvbTest();
-    });
-
-    function EvbTest() {
-        var group = $("#EvbNr").closest(".control-group");
-        var label = group.find(".control-label");
-
-        group.addClass("kroschke-evb-control-group");
-        label.addClass("kroschke-evb");
     }
+
+    $(function () {
+        InitZulassungsdatenFormUI();
+    });
 
     function UpdateAnzahlAbmeldungen() {
         var anzAbm = $("#AnzahlAbmeldungen").val();
