--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/FormWizardStyles.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/FormWizardStyles.cshtml
@@ -25,6 +25,10 @@
         list-style: none;
         margin-bottom: 5px;
     }
+
+    .cursor-pointer .step {
+        cursor: pointer !important;
+    }
     
     .form-wizard .steps .navbar-inner ul li a {
         box-sizing: border-box;
