--- a/inetpub/wwwroot/ServicesMvc/Views/Login/_Themes/AH2015/Impressum.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Login/_Themes/AH2015/Impressum.cshtml
@@ -10,7 +10,7 @@
 
 <div class="loginhead">@Html.Partial("Partial/Logo")</div>
 
-<div class="content">
+<div class="content" style="width: auto;  margin-left: 30px; margin-right: 30px;">
    <h3 class="page-title">@Localize.Imprint </h3>
 
     @Html.Partial(appSettings.AppOwnerImpressumPartialViewName)
@@ -22,3 +22,4 @@
     @Html.Partial("Partial/Footer") 
 </div>
 
+    
