--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/IconView.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/IconView.cshtml
@@ -12,7 +12,7 @@
 
 @if (logonContext.TranslateMenuAppName(Model).ToUpper() == "KROSCHKE CLEVER")
 {
-    <i class="customicon-search24x24-2"></i>
+    <i class="icon-search"></i>
 }
 else
 {
