Sonderlogik für "virtuelle" Versandzulassungen (SAP-seitig je Kunde gepflegt, Darstellung als Versandzulassung trotz Belegtyp AN bzw. AG)

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
@@ -374,6 +374,7 @@
         @Html.HiddenFor(m => m.IsSchnellabmeldung)
         @Html.HiddenFor(m => m.AnzahlAbmeldungenAenderbar)
         @Html.HiddenFor(m => m.ModusPartnerportal)
+        @Html.HiddenFor(m => m.SimuliereVersand)
 
         if (Model.ModusAbmeldung)
         {
