Extended "ZI-Pool" view to general "necessary documents" functionality

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Formulare/Partial/Uebersicht.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Formulare/Partial/Uebersicht.cshtml
@@ -23,7 +23,7 @@
 
                 <div class="space10"></div>
 
-                @Html.Partial("Partial/ZiPoolInfoListe", Model.ZiPoolDetails)
+                @Html.Partial("Partial/ErforderlicheDokumente", Model.ZiPoolDetails.ErforderlicheDokumente)
             }
 
         </div>
