--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationGrid.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationGrid.cshtml
@@ -56,15 +56,17 @@ i.menu-item {
     display: inline-block;
     width: 32px;
     height: 32px;
-    padding-left: 8px;
+    padding-left: 0;
 }
 i.excel-export 
 {
-    background: transparent url(/ServicesMvc/_Themes/AH2015/images/excel-32x32.png) 0 0 no-repeat !important;
+    background: transparent url(/ServicesMvc/_Themes/AH2015/images/excel-32x32.png?v=20160420) 0 0 no-repeat !important;
+    margin: 0 0 0 5px;
 }
 i.pdf-export 
 {
-    background: transparent url(/ServicesMvc/_Themes/AH2015/images/pdf-32x32.png) 0 0 no-repeat !important;
+    background: transparent url(/ServicesMvc/_Themes/AH2015/images/pdf-32x32.png?v=20160420) 0 0 no-repeat !important;
+    margin: 0 0 0 5px;
 }
 
 </style>
