--- a/inetpub/wwwroot/ServicesMvc/Views/Wfm/Durchlauf.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Wfm/Durchlauf.cshtml
@@ -92,7 +92,8 @@
         text = text.replace(/Std/g, "Std.");
         text = text.replace(/Klaer/g, "Klär.");
 
-        text = text.replace(/Le10/g, " < 10");
+        text = text.replace(/Le03/g, " < 4");
+        text = text.replace(/0410/g, " 4-10");
         text = text.replace(/1120/g, " 11-20");
         text = text.replace(/2130/g, " 21-30");
         text = text.replace(/3140/g, " 31-40");
