--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/_Layout.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/_Layout.cshtml
@@ -122,7 +122,7 @@
         <!-- END CONTAINER -->
         <!-- BEGIN FOOTER -->
         <div class="footer">
-            @DateTime.Now.Year &copy; @appSettings.AppOwnerFullName
+            @DateTime.Now.Year &copy; @appSettings.AppOwnerFullName @appSettings.AppOwnerSuffix
             ~
             <a href="~/DomainCommon/Impressum">@Localize.Imprint</a>
             <div class="span pull-right">
