--- a/inetpub/wwwroot/ServicesMvc/Views/Login/Partial/Footer.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Login/Partial/Footer.cshtml
@@ -3,6 +3,6 @@
     var appSettings = DependencyResolver.Current.GetService<IAppSettings>();
 }
 
-<span class="footer-link float-left no-margin-left">@appSettings.AppOwnerName</span>
+<span class="footer-link float-left no-margin-left">@appSettings.AppOwnerFullName</span>
 <a href="Impressum" class="footer-link">@Localize.Imprint</a>
 <a href="Kontakt" class="footer-link">@Localize.Contact</a>
