--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/ImpressumCkg.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/ImpressumCkg.cshtml
@@ -31,7 +31,8 @@
                     Internet: <a href="http://www.kroschke.de">http://www.kroschke.de</a><br />
                     <br />
                     Geschäftsführer: <br />
-                    Matthias Gauglitz, Philipp Kroschke (Sprecher der Geschäftsführung), York Schmidt zur Nedden<br /><br />
+                    Philipp Kroschke (Sprecher der Geschäftsführung), Matthias Gauglitz, 
+                    <br />York Schmidt zur Nedden<br /><br />
                     Registergericht: Amtsgericht Lübeck<br />
                     HRB 9417 HL <br /><br />
 
@@ -61,11 +62,12 @@
                     Internet:  <a href="http://www.dad.de">http://www.dad.de</a><br />
                     <br />
                     Geschäftsführer: <br />
-                    Matthias Gauglitz, Philipp Kroschke (Sprecher der Geschäftsführung), York Schmidt zur Nedden<br />
+                    Philipp Kroschke (Sprecher der Geschäftsführung), Matthias Gauglitz, 
+                    <br/> York Schmidt zur Nedden<br/><br/>
                     Handelsregister Lübeck HRB 81927 AH <br />
                     Umsatzsteuer-Identifikationsnummer gemäß
                     § 27 a Umsatzsteuergesetz: DE114822102<br />
-                    <br />
+                    <br/><br /><br /><br /><br /><br />
                     Haftungshinweis: <br />
                     Trotz sorgfältiger inhaltlicher Kontrolle übernehmen
                     wir keine Haftung für die Inhalte
